# org_name_similarity

./: .gitignore  .pre-commit-config.yaml  README.md  dev_requirements.txt  linting.md  name_sim.py  setup.cfg  setup.py
.dvc/: config
metrics/: comp_with_128.csv  first_metrics.csv  hard_comp_with_128.csv
models/trained_MiniLM-L12-v2/: README.md  config.json  pytorch_model.bin.dvc  tokenizer_config.json
notebooks/: 1 Создание мультиязычной базы данных.ipynb  2_upload_transformers_for_exps.ipynb  3 Обучение трансформера на собственном датасете.ipynb  4 compare_models.ipynb  5_prepare_new_dataset.ipynb  6 Обучение новой модели трансформера на новом датасете.ipynb  7_train_model_128.ipynb
texts/: 1.txt
