[metadata]
name = hw_package_ml
version = 1.2
package = src

[flake8]
max-line-length = 90
exclude =
    .git
    __pycache__
    setup.py
    dist

[isort]
profile = black
force_grid_wrap = 2
line_length = 90
skip = ['data', 'results', 'dist', 'venv', '.venv', 'metrics', 'images', 'out', 'notebooks', 'models', 'texts']

[black]
line-length = 90
